UPDATE - UI Angular Material

--- a/src/app/components/ui/angular-material/ag-layout/ag-layout.component.html
+++ b/src/app/components/ui/angular-material/ag-layout/ag-layout.component.html
@@ -1,2 +1,46 @@
+<h1>USER PANEL</h1>
+<nav>
+  <a routerLink="/user/home" routerLinkActive="active">Home</a>
+  <a routerLink="/index/login" routerLinkActive="active" style="color:red">Logout</a>
+  <a routerLink="/admin/dashboard" routerLinkActive="active" style="color:lime">Admin Panel</a>
+</nav>
+<br>
+<h1>ANGULAR MATERIAL COMPONENTS</h1>
+<nav>
+  <button routerLink="/ag" routerLinkActive="active" style="color:blueviolet">ANGULAR MATERIAL</button>
+  <button routerLink="/ag/autocomplete" routerLinkActive="active" style="color:blueviolet">autocomplete</button>
+  <button routerLink="/ag/badge" routerLinkActive="active" style="color:blueviolet">badge</button>
+  <button routerLink="/ag/bottomSheet" routerLinkActive="active" style="color:blueviolet">bottomSheet</button>
+  <button routerLink="/ag/button" routerLinkActive="active" style="color:blueviolet">button</button>
+  <button routerLink="/ag/buttonToggle" routerLinkActive="active" style="color:blueviolet">buttonToggle</button>
+  <button routerLink="/ag/card" routerLinkActive="active" style="color:blueviolet">card</button>
+  <button routerLink="/ag/checkbox" routerLinkActive="active" style="color:blueviolet">checkbox</button>
+  <button routerLink="/ag/chips" routerLinkActive="active" style="color:blueviolet">chips</button>
+  <button routerLink="/ag/datapicker" routerLinkActive="active" style="color:blueviolet">datapicker</button>
+  <button routerLink="/ag/dialog" routerLinkActive="active" style="color:blueviolet">dialog</button>
+  <button routerLink="/ag/divider" routerLinkActive="active" style="color:blueviolet">divider</button>
+  <button routerLink="/ag/expansionPanel" routerLinkActive="active" style="color:blueviolet">expansionPanel</button>
+  <button routerLink="/ag/formField" routerLinkActive="active" style="color:blueviolet">formField</button>
+  <button routerLink="/ag/gridList" routerLinkActive="active" style="color:blueviolet">gridList</button>
+  <button routerLink="/ag/icon" routerLinkActive="active" style="color:blueviolet">icon</button>
+  <button routerLink="/ag/input" routerLinkActive="active" style="color:blueviolet">input</button>
+  <button routerLink="/ag/list" routerLinkActive="active" style="color:blueviolet">list</button>
+  <button routerLink="/ag/menu" routerLinkActive="active" style="color:blueviolet">menu</button>
+  <button routerLink="/ag/paginator" routerLinkActive="active" style="color:blueviolet">paginator</button>
+  <button routerLink="/ag/progressBar" routerLinkActive="active" style="color:blueviolet">progressBar</button>
+  <button routerLink="/ag/progressSpinner" routerLinkActive="active" style="color:blueviolet">progressSpinner</button>
+  <button routerLink="/ag/radioButton" routerLinkActive="active" style="color:blueviolet">radioButton</button>
+  <button routerLink="/ag/ripples" routerLinkActive="active" style="color:blueviolet">ripples</button>
+  <button routerLink="/ag/select" routerLinkActive="active" style="color:blueviolet">select</button>
+  <button routerLink="/ag/sidenav" routerLinkActive="active" style="color:blueviolet">sidenav</button>
+  <button routerLink="/ag/slideToggle" routerLinkActive="active" style="color:blueviolet">slideToggle</button>
+  <button routerLink="/ag/slider" routerLinkActive="active" style="color:blueviolet">slider</button>
+  <button routerLink="/ag/snackbar" routerLinkActive="active" style="color:blueviolet">snackbar</button>
+  <button routerLink="/ag/sortHeader" routerLinkActive="active" style="color:blueviolet">sortHeader</button>
+  <button routerLink="/ag/stepper" routerLinkActive="active" style="color:blueviolet">stepper</button>
+  <button routerLink="/ag/table" routerLinkActive="active" style="color:blueviolet">table</button>
+  <button routerLink="/ag/tabs" routerLinkActive="active" style="color:blueviolet">tabs</button>
+  <button routerLink="/ag/toolbar" routerLinkActive="active" style="color:blueviolet">toolbar</button>
+  <button routerLink="/ag/tooltip" routerLinkActive="active" style="color:blueviolet">tooltip</button>
+</nav>
 <router-outlet></router-outlet>
-angular material layout
