--- a/src/app/components/user/user-layout/user-layout.component.html
+++ b/src/app/components/user/user-layout/user-layout.component.html
@@ -4,4 +4,9 @@
   <a routerLink="/index/login" routerLinkActive="active" style="color:red">Logout</a>
   <a routerLink="/admin/dashboard" routerLinkActive="active" style="color:lime">Admin Panel</a>
 </nav>
+<br>
+<h1>USER INTERFACES</h1>
+<nav>
+  <a routerLink="/ag" routerLinkActive="active" style="color:blueviolet">ANGULAR MATERIAL</a>
+</nav>
 <router-outlet></router-outlet>
