UPDATE- Angular material

--- a/src/app/components/ui/angular-material/ag-bottom-sheet/ag-bottom-sheet.component.html
+++ b/src/app/components/ui/angular-material/ag-bottom-sheet/ag-bottom-sheet.component.html
@@ -1,1 +1,3 @@
-<p>ag-bottom-sheet works!</p>
+<p>You have received a file called "cat-picture.jpeg".</p>
+
+<button mat-raised-button (click)="openBottomSheet()">Open file</button>
